-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.3
-
None
QToolbutton with popup mode QToolButton::InstantPopup and a stylesshet have 2 arrows.
The normal arrow, and a big arrow drown in the center of the button
It's the same problem of QTBUG-98286. Perhaps the patch done to correct this bug have introduce this one.
QToolbutton with QToolButton::MenuButtonPopup also have the problem + the menu part seems always highlighted
with stylesheet:
— without:
qApp->setStyleSheet("QMenu::item:selected { color: white; }"); QToolButton* tb = new QToolButton; QMenu* mnu = new QMenu(tb); tb->setMenu(mnu); tb->setPopupMode(QToolButton::InstantPopup); tb->show();
- duplicates
-
QTBUG-100109 QToolButton "doubles" the arrow
-
- Closed
-
- relates to
-
QTBUG-100433 Regression in 6.2.3 with stylesheets and button rendering
-
- Closed
-
| For Gerrit Dashboard: QTBUG-100401 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 394378,15 | Eliminate double arrow in QToolButton | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 394379,15 | Update QToolButton texts and add more stylesheets to test with | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 396169,2 | Eliminate double arrow in QToolButton | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 396170,2 | Eliminate double arrow in QToolButton | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 396293,2 | Update QToolButton texts and add more stylesheets to test with | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 396294,1 | Update QToolButton texts and add more stylesheets to test with | 6.2 | qt/qtbase | Status: ABANDONED | 0 | 0 |