Eliminate double arrow in QToolButton

- InstantPopup mode is set and
- application uses a stylesheet that does not apply to QToolButton

Task-number: QTBUG-100401
Change-Id: Iadf752ad9280d59763f4efc1938927a9b83e6ad9
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ea0e0a865237983b484ed88447b9fc4c473e2759)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>